--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "firebase": "^9.17.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "firebase": "^8.7.1",
+    "netlify-cli": "^13.1.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "vite": "^4.1.4"
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.4.2"
   }
 }
